plugins {
    id 'application'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

// tag::repositories[]
repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
}
// end::repositories[]

// tag::dependencies[]
dependencies {
    testCompile  'com.github.hmcts:fortify-client:1.2.1:all'
    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.4'
}
// end::dependencies[]

task fortifyScan(type: JavaExec)  {
    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}